💯test: 게시글 작성과 임시저장 로직 변경으로 인한 테스트 수정사항 반영